[package]
name = "ttnl"
version = "0.1.0"
edition = "2021"

[features]
tor = ["tor-rtcompat", "tokio-util", "arti-client", "tokio"]


[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
protobuf = "3.2.0"
prost = "0.11.8"
tokio-util = { version = "0.7.7", features = ["codec"], optional = true }
rand = "0.8.5"
arti-client = { version = "0.8.2", optional = true }
tokio = { version = "1.26.0", optional = true }
tor-rtcompat = { version = "0.8.1", optional = true }

[build-dependencies]
prost-build = "0.11.8"

